Add New ReactAPP

--- a/Instagram/.env
+++ b/Instagram/.env
@@ -2,9 +2,11 @@
 # FastAPI Instagram Clone Env
 # =============================
 
-# Database URL
+### Database URL
 # DATABASE_URL=sqlite:///./instagram_api.db
-# DATABASE_URL=postgresql://<username>:<password>@<host>:<port>/<database_name>
+# / -> %2F # Encoded special char (/?#%&=)
+
+DATABASE_URL=postgresql://sachin_fastapi:S%40chin005668/fastapi.@localhost:5432/instagramdb
 
 
 # JWT Authentication
